--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <div class="container">
         <h1>CodeMirror XML4TEI</h1>
         <p>Come ottenere un editor per TEI usando CodeMirror, definendo uno schema di TAG in XML</p>
+        <p><a href="https://github.com/orazionelson/CodeMirrorXML4TEI">https://github.com/orazionelson/CodeMirrorXML4TEI</a></p>
       </div>
     </div>
 
