--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ var tags = {
     </span>
 </cm_tei_schema>	
 		</pre>
-          <p>Questa struttura è molto più intuitiva del JSON puro, senza dover combatter tra apici, virgolette e parentesi basterà seguire poche semplici regole:</p>
+          <p>Questa struttura è molto più intuitiva del JSON puro, senza dover combattere tra apici, virgolette e parentesi basterà seguire poche semplici regole:</p>
           <ul>
 			<li>si definisce il marcatore con il suo stesso nome;</li>
 			<li>all'interno del marcatore si definiscono in <b>&lt;attrs&gt;</b> gli attributi, il tag sarà il nome dell'attributo e il contenuto sarà la lista di valori possibili, un tag vuoto permette di inserire un testo libero</li>
