--- a/index.html
+++ b/index.html
@@ -185,7 +185,10 @@ var tags = {
 			  <li>spostare la chiamata dello schema XML nel trigger di codemirror, questo ci permetterà agevolmente di avere schemi diversi anche nello stesso contesto</li>
 			  <li>adattare la trasformazione del nostro XML al JSON di CodeMirror che, ad esempio, richiede che il tag root sia preceduto da un punto esclamativo (cosa che non possiamo fare nell'XML)</li>
           </ul>
-          <p>Alla fine lo schema XML per scrivere l'XML sarà così:</p>
+          <p><b>Cfr. il file: <a href="cm_tei_schema2json.js">cm_tei_schema2json.js</a></b></p>
+          
+			<p>Alla fine lo schema XML per scrivere l'XML sarà così:</p>
+          <p><b>file: <a href="cm-tei-schema.xml">cm-tei-schema.xml</a></b></p>
 		<pre class="pretty-pre">
 <cm_tei_schema>
     <top>p</top>
@@ -233,6 +236,11 @@ var tags = {
 			<li>all'interno del marcatore si definiscono in <b>&lt;attrs&gt;</b> gli attributi, il tag sarà il nome dell'attributo e il contenuto sarà la lista di valori possibili, un tag vuoto permette di inserire un testo libero</li>
 			<li>all'interno del marcatore dentro il tag <b>&lt;children&gt;</b> si definiranno i marcatori figli ammessi, se il tag non ammette figli si dovrà inserire un tag <b>&lt;children/&gt;</b> vuoto.</li>
           </ul>
+        <p>Mentre la chiamata <i>hintOptions</i> nel trigger di CodeMirror apparirà così:</p>
+        <pre class="pretty-pre">
+			hintOptions: {schemaInfo: $.cm_tei_schema('cm-tei-schema.xml')}
+        </pre>  
+          
         <p>Si può testare l'editor con questa semplice struttura qui:</p> 
         <form class="col-md-10" style="border: 1px solid black">
 			<textarea id="code" name="code"><!-- write TEI-XML below --></textarea>
