--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ var tags = {
 			  <li>spostare la chiamata dello schema XML nel trigger di codemirror, questo ci permetterà agevolmente di avere schemi diversi anche nello stesso contesto</li>
 			  <li>adattare la trasformazione del nostro XML al JSON di CodeMirror che, ad esempio, richiede che il tag root sia preceduto da un punto esclamativo (cosa che non possiamo fare nell'XML)</li>
           </ul>
-          <p><b>Cfr. il file: <a href="cm_tei_schema2json.js">cm_tei_schema2json.js</a></b></p>
+          <p><b>Cfr. il file: <a href="js/cm_tei_schema2json.js">cm_tei_schema2json.js</a></b></p>
           
 			<p>Alla fine lo schema XML per scrivere l'XML sarà così:</p>
           <p><b>file: <a href="cm-tei-schema.xml">cm-tei-schema.xml</a></b></p>
