--- a/editor.html
+++ b/editor.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
+    <meta name="description" content="A jQuery plugin to build a TEI editor with Codemirror">
     <meta name="author" content="Alfredo Cosco">
     <title>CodeMirror XML4TEI</title>
     <!-- Bootstrap core CSS -->
